yoav: logs simulation into project