@@ -2,13 +2,12 @@ package frc.utils.loggerutils;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 enum LogSaveSpot {
 
     USB(Path.of("/media/sda1")),
     ROBORIO(Path.of("/home/lvuser/logs")),
-    COMPUTER(Paths.get(System.getProperty("user.home"), "Desktop", "SimulationLogs"));
+    COMPUTER(Path.of("SimulationLogs"));
 
     private final Path savePath;
 
